<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray4"
    tools:context=".ActivityCalculator">

    <LinearLayout
        android:id="@+id/LinearL_title"
        style="@style/title_bar_style"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/imgB_back"
            style="@style/imgB_arrow"
            android:contentDescription="@string/txt_back_string"
            android:rotation="180"
            app:srcCompat="@mipmap/arrow" />

        <TextView
            android:id="@+id/txt_title"
            style="@style/title_style"
            android:text="@string/txt_option1_a1_string" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearL_wrapper"
        style="@style/layout_wrapper"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/LinearL_title">

        <LinearLayout
            android:id="@+id/LinearL_val1"
            style="@style/layout_val" >

            <TextView
                android:id="@+id/txt_val1"
                style="@style/txt_value"
                android:labelFor="@id/editTextNumberDecimal_val1"
                android:text="@string/txt_val1_a2_string" />

            <EditText
                android:id="@+id/editTextNumberDecimal_val1"
                style="@style/edit_value"
                android:autofillHints="" >
                <requestFocus />
            </EditText>

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switch1"
                style="@style/_switch"
                app:thumbTint="@color/green1" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/LinearL_val2"
            style="@style/layout_val" >

            <TextView
                android:id="@+id/txt_val2"
                style="@style/txt_value"
                android:labelFor="@id/editTextNumberDecimal_val2"
                android:text="@string/txt_val2_a2_string" />

            <EditText
                android:id="@+id/editTextNumberDecimal_val2"
                style="@style/edit_value"
                android:autofillHints="" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switch2"
                style="@style/_switch"
                app:thumbTint="@color/green1" />

        </LinearLayout>

    </LinearLayout>

    <RadioGroup
        android:id="@+id/radioGroup_oper"
        style="@style/radioGroup_wrapper"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LinearL_wrapper">

        <TextView
            android:id="@+id/txt_operTitle"
            style="@style/radioGroup_title"
            android:text="@string/txt_operTitle_a2_string" />

        <RadioButton
            android:id="@+id/radioButton_add"
            style="@style/radioButton"
            android:checked="true"
            android:text="@string/radioButton_add_a2_string"
            app:buttonTint="@color/green1"/>

        <RadioButton
            android:id="@+id/radioButton_sub"
            style="@style/radioButton"
            android:text="@string/radioButton_sub_a2_string"
            app:buttonTint="@color/green1"/>

        <RadioButton
            android:id="@+id/radioButton_mul"
            style="@style/radioButton"
            android:text="@string/radioButton_mul_a2_string"
            app:buttonTint="@color/green1"/>

        <RadioButton
            android:id="@+id/radioButton_div"
            style="@style/radioButton"
            android:text="@string/radioButton_div_a2_string"
            app:buttonTint="@color/green1" />

    </RadioGroup>

    <LinearLayout
        android:id="@+id/LinearL_result"
        style="@style/layout_panel"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/radioGroup_oper">

        <Button
            android:id="@+id/button_calculate"
            style="@style/button_basic"
            android:text="@string/button_calculate_string"
            app:backgroundTint="@color/green1" />

        <TextView
            android:id="@+id/txt_result"
            style="@style/txtV_value"
            android:text="@string/txt_0.0_string" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearL_memory"
        style="@style/layout_panel"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/LinearL_result">

        <LinearLayout
            android:id="@+id/LinearL_memory_row1"
            style="@style/layout_panel_row">

            <TextView
                android:id="@+id/txt_memoryTitle"
                style="@style/txtV_green"
                android:text="@string/txt_memoryTitle_a2_string" />

            <TextView
                android:id="@+id/txt_memory"
                style="@style/txtV_value"
                android:text="@string/txt_0.0_string"  />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/TableL_row2"
            style="@style/layout_panel_row">

            <Button
                android:id="@+id/button_mClr"
                style="@style/small_button"
                android:text="@string/button_mClr_a2_string"
                app:backgroundTint="@color/green1" />

            <Button
                android:id="@+id/button_mSet"
                style="@style/small_button"
                android:text="@string/button_mSet_a2_string"
                app:backgroundTint="@color/green1" />

            <Button
                android:id="@+id/button_mPlus"
                style="@style/small_button"
                android:text="@string/button_mPlus_a2_string"
                app:backgroundTint="@color/green1" />

            <Button
                android:id="@+id/button_mMinus"
                style="@style/small_button"
                android:text="@string/button_mMinus_a2_string"
                app:backgroundTint="@color/green1" />

        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>